Added support for Less and Sass

--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "clean:test": "gulp clean:test",
     "clean:appjs": "gulp clean:appjs",
     "lint": "gulp lint",
-    "compile": "gulp build:global:compile:app",
-    "compile:reload": "gulp build:global:compile:app:watch",
+    "compile": "gulp build:global:compile:app:watch",
     "test:generatespec": "gulp test:generatespec",
-    "test:compile": "gulp test:compile",
-    "test:compilereload": "gulp test:compile:watch",
+    "test:compile": "gulp test:compile:watch",
     "test": "gulp test:karma:once",
     "test:reload": "gulp test:karma",
     "build:dev": "gulp build:dev",
     "build:prod": "build:prod",
-    "serve": "gulp serve"
+    "serve": "gulp serve",
+    "stylesheet:less": "gulp stylesheet:less:watch",
+    "stylesheet:sass": "gulp stylesheet:sass:watch"
   },
   "dependencies": {
     "@angular/common": "^2.4.1",
@@ -47,10 +47,14 @@
     "codelyzer": "^2.0.0-beta.4",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
+    "gulp-csso": "^2.0.0",
+    "gulp-less": "^3.3.0",
     "gulp-msg": "^0.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-replace": "^0.5.4",
+    "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.1.3",
