--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-inject": "^4.2.0",
     "gulp-less": "^3.3.0",
+    "gulp-lesshint": "^2.1.0",
     "gulp-msg": "^0.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.0.0",
+    "gulp-sass-lint": "^1.3.2",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.1.3",
