--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "test": "gulp test:karma:once",
     "test:reload": "gulp test:karma",
     "build:dev": "gulp build:dev",
-    "build:prod": "gulp build:prod",
+    "build:prod": "gulp build:prod && gulp serve:simple",
     "serve": "gulp serve",
-    "stylesheet:less": "gulp stylesheet:less:watch",
-    "stylesheet:sass": "gulp stylesheet:sass:watch"
+    "compile:less": "gulp stylesheet:less:watch",
+    "compile:sass": "gulp stylesheet:sass:watch"
   },
   "dependencies": {
     "@angular/common": "^2.4.1",
@@ -34,6 +34,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.1",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
     "reflect-metadata": "^0.1.9",
     "reselect": "^2.5.4",
     "rxjs": "^5.0.2",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "^2.5.38",
+    "@types/lodash": "^4.14.45",
     "@types/node": "^6.0.53",
     "browser-sync": "^2.18.5",
     "codelyzer": "^2.0.0-beta.4",
@@ -74,7 +76,6 @@
     "karma-mocha-reporter": "^2.2.1",
     "karma-remap-istanbul": "^0.4.0",
     "karma-requirejs": "^1.1.0",
-    "lodash": "^4.17.3",
     "recursive-readdir": "^2.1.0",
     "requirejs": "^2.3.2",
     "run-sequence": "^1.2.2",
