--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
   "license": "MIT",
   "scripts": {
     "clean": "gulp clean:dist",
-    "clean:assets": "gulp clean:assets",
-    "clean:app": "gulp clean:app",
-    "clean:test": "gulp clean:test",
-    "clean:appjs": "gulp clean:appjs",
-    "lint": "gulp lint",
-    "compile": "gulp build:global:compile:app:watch",
+    "lint:app": "gulp lint:app",
+    "lint:less": "gulp lint:less",
+    "lint:sass": "gulp lint:sass",
+    "compile:app": "gulp compile:app:watch",
+    "compile:less": "gulp compile:less:watch",
+    "compile:sass": "gulp compile:sass:watch",
     "test:generatespec": "gulp test:generatespec",
     "test:compile": "gulp test:compile:watch",
     "test": "gulp test:karma:once",
     "test:reload": "gulp test:karma",
-    "build:dev": "gulp build:dev",
-    "build:prod": "gulp build:prod && gulp serve:simple",
+    "build:dev": "gulp serve:dev",
+    "build:prod": "gulp build:prod && gulp serve",
+    "build:rollup": "gulp build:prod --rollup && gulp serve",
     "serve": "gulp serve",
-    "compile:less": "gulp stylesheet:less:watch",
-    "compile:sass": "gulp stylesheet:sass:watch"
+    "serve:dev": "gulp serve:dev"
   },
   "dependencies": {
     "@angular/common": "^2.4.1",
@@ -56,7 +56,6 @@
     "gulp-inject": "^4.2.0",
     "gulp-less": "^3.3.0",
     "gulp-lesshint": "^2.1.0",
-    "gulp-msg": "^0.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.0.0",
@@ -65,6 +64,7 @@
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.1.3",
     "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.8",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^2.7.0",
     "karma": "^1.3.0",
@@ -77,7 +77,12 @@
     "karma-remap-istanbul": "^0.4.0",
     "karma-requirejs": "^1.1.0",
     "recursive-readdir": "^2.1.0",
+    "require-dir": "^0.3.1",
     "requirejs": "^2.3.2",
+    "rollup": "^0.39.2",
+    "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-uglify": "^1.0.1",
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.34",
     "traceur": "^0.0.111",
