--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint:app": "gulp lint:app",
     "lint:less": "gulp lint:less",
     "lint:sass": "gulp lint:sass",
-    "compile:app": "gulp compile:app:watch",
-    "compile:less": "gulp compile:less:watch",
-    "compile:sass": "gulp compile:sass:watch",
+    "compile:app": "gulp compile:app",
+    "compile:less": "gulp compile:less",
+    "compile:sass": "gulp compile:sass",
+    "compile:app:watch": "gulp compile:app:watch",
+    "compile:less:watch": "gulp compile:less:watch",
+    "compile:sass:watch": "gulp compile:sass:watch",
     "test:generatespec": "gulp test:generatespec",
-    "test:compile": "gulp test:compile:watch",
-    "test": "gulp test:karma:once",
-    "test:reload": "gulp test:karma",
+    "lint:test": "gulp lint:test",
+    "compile:test": "gulp compile:test",
+    "compile:test:watch": "gulp compile:test:watch",
+    "test:unit": "gulp test:unit",
+    "test:unit:watch": "gulp test:unit:watch",
     "build:dev": "gulp serve:dev",
     "build:prod": "gulp build:prod && gulp serve",
     "build:rollup": "gulp build:prod --rollup && gulp serve",
