--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "rollup-plugin-uglify": "^1.0.1",
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.34",
+    "through2": "^2.0.3",
     "tslint": "^4.2.0",
     "typescript": "2.0.10"
   }
