--- a/tsconfig-exp.json
+++ b/tsconfig-exp.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "rootDir": "src/",
+        "outDir": "dist/",
         "target": "es5",
         "module": "es2015",
         "moduleResolution": "node",
