Added CSS linting

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:app": "gulp lint:app",
     "lint:less": "gulp lint:less",
     "lint:sass": "gulp lint:sass",
+    "lint:css": "gulp lint:css",
     "compile:app": "gulp compile:app",
     "compile:less": "gulp compile:less",
     "compile:sass": "gulp compile:sass",
@@ -51,10 +52,12 @@
     "@types/node": "^6.0.53",
     "browser-sync": "^2.18.5",
     "codelyzer": "^2.0.0-beta.4",
+    "csso": "^2.3.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
+    "gulp-csslint": "^1.0.0",
     "gulp-csso": "^2.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-inject": "^4.2.0",
