--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compile:test:watch": "gulp compile:test:watch",
     "test:unit": "gulp test:unit",
     "test:unit:watch": "gulp test:unit:watch",
+    "test:coverage": "gulp test:coverage",
     "build:dev": "gulp build:dev",
     "build:prod": "gulp build:prod",
     "build:rollup": "gulp build:prod --rollup",
@@ -78,7 +79,6 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
     "karma-remap-istanbul": "^0.4.0",
