--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,13 @@ after_failure:
   - cat /home/travis/build/joumenharzli/angular-seed/npm-debug.log
 
 # https://docs.travis-ci.com/user/caching/#Caching-directories-(Bundler%2C-dependencies)
-#cache:
-#  directories: node_modules
+cache:
+  directories: node_modules
+
+notifications:
+  email:
+    on_success: never
+    on_failure: always
 
 script:
   - npm run test:unit && npm run build:dev && npm run build:prod && npm run build:rollup
