--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:unit": "gulp test:unit",
     "test:unit:watch": "gulp test:unit:watch",
     "test:coverage": "gulp test:coverage",
+    "test:e2e": "gulp test:e2e",
     "build:dev": "gulp build:dev",
     "build:prod": "gulp build:prod",
     "build:rollup": "gulp build:prod --rollup",
@@ -81,6 +82,7 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
     "karma-remap-istanbul": "^0.4.0",
+    "protractor": "^5.0.0",
     "recursive-readdir": "^2.1.0",
     "require-dir": "^0.3.1",
     "rollup": "^0.41.1",
