--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ branches:
 os:
   - linux
 
+addons:
+  firefox: "49.0"
+  
 before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
