fix(protactor) not working with firefox > 47

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ branches:
 
 os:
   - linux
-
+# https://github.com/angular/protractor/blob/master/docs/browser-support.md
+# For the moment, we recommend testing against FireFox 47.
 addons:
-  firefox: "49.0"
-  
+  firefox: "47.0"
+
 before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
