--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ branches:
 os:
   - linux
 
+addons:
+  packages:
+    - unzip
+    - google-chrome-stable
+
 before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
