BUG(travis+protractor) fix 6

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js: stable
 sudo: required
+dist: trusty
 
 install: true # travis/yarn bug
 
@@ -16,11 +17,12 @@ addons:
     - google-chrome-stable
 
 before_install:
-  - wget http://chromedriver.storage.googleapis.com/2.21/chromedriver_linux64.zip
-  - unzip chromedriver_linux64.zip
-  - sudo chmod u+x chromedriver
-  - sudo mv chromedriver /usr/bin/
-  - export CHROME_BIN=chromium-browser
+  - sudo apt-get update
+  - sudo apt-get install -y libappindicator1 fonts-liberation
+  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+  - sudo dpkg -i google-chrome*.deb
+#  - export CHROME_BIN=chromium-browser
+  - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 
@@ -40,4 +42,4 @@ notifications:
     on_failure: always
 
 script:
-  - npm run test:unit && npm run test:e2e && npm run build:dev && npm run build:prod && npm run build:rollup
+  - npm run test:unit && npm run build:dev && npm run build:prod && npm run build:rollup
