--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "build:prod": "gulp build:prod",
     "build:rollup": "gulp build:prod --rollup",
     "serve": "gulp serve",
-    "serve:dev": "gulp serve:dev"
+    "serve:dev": "gulp serve:dev",
+    "release:patch": "gulp version:release --patch",
+    "release:minor": "gulp version:release --minor",
+    "release:major": "gulp version:release --major"
   },
   "dependencies": {
     "@angular/common": "^2.4.2",
@@ -58,9 +61,12 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-bump": "^2.5.1",
     "gulp-concat": "^2.6.1",
+    "gulp-conventional-changelog": "^1.1.0",
     "gulp-csslint": "^1.0.0",
     "gulp-csso": "^2.0.0",
+    "gulp-git": "^1.12.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-inject": "^4.2.0",
     "gulp-less": "^3.3.0",
@@ -90,6 +96,7 @@
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
     "run-sequence": "^1.2.2",
+    "semver": "^5.3.0",
     "systemjs-builder": "^0.15.34",
     "through2": "^2.0.3",
     "tslint": "^4.2.0",
