--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "^2.4.3",
+    "@angular/platform-server": "^2.4.3",
     "@types/jasmine": "^2.5.38",
     "@types/lodash": "^4.14.45",
     "@types/node": "^6.0.53",
