--- a/.travis.yml
+++ b/.travis.yml
@@ -42,4 +42,4 @@ notifications:
     on_failure: always
 
 script:
-  - npm run test:e2e && npm run test:unit && npm run build:dev && npm run build:prod && npm run build:rollup
+  - npm run test:e2e && npm run test:unit && npm run build:dev && npm run build:prod && npm run build:rollup && npm run build:aot
