--- a/package.json
+++ b/package.json
@@ -35,30 +35,30 @@
     "release:major": "gulp version:release --type=major"
   },
   "dependencies": {
-    "@angular/common": "^2.4.2",
-    "@angular/compiler": "^2.4.2",
-    "@angular/core": "^2.4.2",
-    "@angular/forms": "^2.4.2",
-    "@angular/http": "^2.4.2",
-    "@angular/platform-browser": "^2.4.2",
-    "@angular/platform-browser-dynamic": "^2.4.2",
-    "@angular/router": "^3.4.2",
+    "@angular/common": "^2.4.4",
+    "@angular/compiler": "^2.4.4",
+    "@angular/core": "^2.4.4",
+    "@angular/forms": "^2.4.4",
+    "@angular/http": "^2.4.4",
+    "@angular/platform-browser": "^2.4.4",
+    "@angular/platform-browser-dynamic": "^2.4.4",
+    "@angular/router": "^3.4.4",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.1",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
     "reselect": "^2.5.4",
-    "rxjs": "^5.0.2",
-    "systemjs": "^0.19.41",
-    "zone.js": "^0.7.4"
+    "rxjs": "^5.0.3",
+    "systemjs": "^0.19.43",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.4.3",
-    "@angular/platform-server": "^2.4.3",
-    "@types/jasmine": "^2.5.38",
-    "@types/lodash": "^4.14.45",
-    "@types/node": "^6.0.53",
-    "browser-sync": "^2.18.5",
+    "@angular/compiler-cli": "^2.4.4",
+    "@angular/platform-server": "^2.4.4",
+    "@types/jasmine": "^2.5.41",
+    "@types/lodash": "^4.14.50",
+    "@types/node": "^7.0.1",
+    "browser-sync": "^2.18.6",
     "codelyzer": "^2.0.0-beta.4",
     "csso": "^2.3.1",
     "del": "^2.2.2",
@@ -76,25 +76,25 @@
     "gulp-lesshint": "^2.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-replace": "^0.5.4",
-    "gulp-sass": "^3.0.0",
+    "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "^1.3.2",
-    "gulp-sourcemaps": "^2.3.0",
+    "gulp-sourcemaps": "^2.4.0",
     "gulp-tslint": "^7.0.1",
-    "gulp-typescript": "^3.1.3",
+    "gulp-typescript": "^3.1.4",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
+    "karma": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.1",
+    "karma-mocha-reporter": "^2.2.2",
     "karma-remap-istanbul": "^0.4.0",
     "protractor": "^5.0.0",
     "recursive-readdir": "^2.1.0",
     "require-dir": "^0.3.1",
-    "rollup": "^0.41.1",
+    "rollup": "^0.41.4",
     "rollup-plugin-commonjs": "^7.0.0",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
@@ -102,7 +102,7 @@
     "semver": "^5.3.0",
     "systemjs-builder": "^0.15.34",
     "through2": "^2.0.3",
-    "tslint": "^4.2.0",
-    "typescript": "2.0.10"
+    "tslint": "^4.3.1",
+    "typescript": "^2.1.5"
   }
 }
